@@ -1,20 +1,32 @@
 package com.devonfw.tools.ide.context;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.net.InetAddress;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Objects;
 import java.util.function.Function;
 
+import com.devonfw.tools.ide.cli.CliAbortException;
+import com.devonfw.tools.ide.cli.CliArgument;
+import com.devonfw.tools.ide.cli.CliArguments;
+import com.devonfw.tools.ide.cli.CliException;
+import com.devonfw.tools.ide.commandlet.Commandlet;
 import com.devonfw.tools.ide.commandlet.CommandletManager;
 import com.devonfw.tools.ide.commandlet.CommandletManagerImpl;
+import com.devonfw.tools.ide.commandlet.ContextCommandlet;
+import com.devonfw.tools.ide.commandlet.HelpCommandlet;
 import com.devonfw.tools.ide.common.SystemPath;
+import com.devonfw.tools.ide.completion.CompletionCandidate;
+import com.devonfw.tools.ide.completion.CompletionCandidateCollector;
+import com.devonfw.tools.ide.completion.CompletionCandidateCollectorDefault;
 import com.devonfw.tools.ide.environment.AbstractEnvironmentVariables;
 import com.devonfw.tools.ide.environment.EnvironmentVariables;
 import com.devonfw.tools.ide.environment.EnvironmentVariablesType;
@@ -28,61 +40,64 @@ import com.devonfw.tools.ide.os.SystemInfo;
 import com.devonfw.tools.ide.os.SystemInfoImpl;
 import com.devonfw.tools.ide.process.ProcessContext;
 import com.devonfw.tools.ide.process.ProcessContextImpl;
-import com.devonfw.tools.ide.process.ProcessErrorHandling;
 import com.devonfw.tools.ide.process.ProcessResult;
+import com.devonfw.tools.ide.property.Property;
 import com.devonfw.tools.ide.repo.CustomToolRepository;
 import com.devonfw.tools.ide.repo.CustomToolRepositoryImpl;
 import com.devonfw.tools.ide.repo.DefaultToolRepository;
 import com.devonfw.tools.ide.repo.ToolRepository;
+import com.devonfw.tools.ide.step.Step;
+import com.devonfw.tools.ide.step.StepImpl;
 import com.devonfw.tools.ide.url.model.UrlMetadata;
-import com.devonfw.tools.ide.variable.IdeVariables;
 
 /**
  * Abstract base implementation of {@link IdeContext}.
  */
 public abstract class AbstractIdeContext implements IdeContext {
 
+  private static final String IDE_URLS_GIT = "https://github.com/devonfw/ide-urls.git";
+
   private final Map<IdeLogLevel, IdeSubLogger> loggers;
 
-  private final Path ideHome;
+  private Path ideHome;
 
   private final Path ideRoot;
 
-  private final Path confPath;
+  private Path confPath;
 
-  private final Path settingsPath;
+  private Path settingsPath;
 
-  private final Path softwarePath;
+  private Path softwarePath;
 
-  private final Path softwareRepositoryPath;
+  private Path softwareRepositoryPath;
 
-  private final Path pluginsPath;
+  private Path pluginsPath;
 
-  private final Path workspacePath;
+  private Path workspacePath;
 
-  private final String workspaceName;
+  private String workspaceName;
 
-  private final Path urlsPath;
+  private Path urlsPath;
 
-  private final Path tempPath;
+  private Path tempPath;
 
-  private final Path tempDownloadPath;
+  private Path tempDownloadPath;
 
-  private final Path cwd;
+  private Path cwd;
 
-  private final Path downloadPath;
+  private Path downloadPath;
 
-  private final Path toolRepository;
+  private Path toolRepository;
 
-  private final Path userHome;
+  private Path userHome;
 
-  private final Path userHomeIde;
+  private Path userHomeIde;
 
-  private final SystemPath path;
+  private SystemPath path;
 
   private final SystemInfo systemInfo;
 
-  private final EnvironmentVariables variables;
+  private EnvironmentVariables variables;
 
   private final FileAccess fileAccess;
 
@@ -90,9 +105,11 @@ public abstract class AbstractIdeContext implements IdeContext {
 
   private final ToolRepository defaultToolRepository;
 
-  private final CustomToolRepository customToolRepository;
+  private CustomToolRepository customToolRepository;
 
-  private final DirectoryMerger workspaceMerger;
+  private DirectoryMerger workspaceMerger;
+
+  private final Function<IdeLogLevel, IdeSubLogger> loggerFactory;
 
   private boolean offlineMode;
 
@@ -106,37 +123,36 @@ public abstract class AbstractIdeContext implements IdeContext {
 
   private UrlMetadata urlMetadata;
 
+  private Path defaultExecutionDirectory;
+
+  private StepImpl currentStep;
+
   /**
    * The constructor.
    *
    * @param minLogLevel the minimum {@link IdeLogLevel} to enable. Should be {@link IdeLogLevel#INFO} by default.
    * @param factory the {@link Function} to create {@link IdeSubLogger} per {@link IdeLogLevel}.
    * @param userDir the optional {@link Path} to current working directory.
+   * @param toolRepository @param toolRepository the {@link ToolRepository} of the context. If it is set to {@code null} {@link DefaultToolRepository} will be
+   * used.
    */
-  public AbstractIdeContext(IdeLogLevel minLogLevel, Function<IdeLogLevel, IdeSubLogger> factory, Path userDir) {
+  public AbstractIdeContext(IdeLogLevel minLogLevel, Function<IdeLogLevel, IdeSubLogger> factory, Path userDir, ToolRepository toolRepository) {
 
     super();
+    this.loggerFactory = factory;
     this.loggers = new HashMap<>();
-    for (IdeLogLevel level : IdeLogLevel.values()) {
-      IdeSubLogger logger;
-      if (level.ordinal() < minLogLevel.ordinal()) {
-        logger = new IdeSubLoggerNone(level);
-      } else {
-        logger = factory.apply(level);
-      }
-      this.loggers.put(level, logger);
-    }
-    this.systemInfo = new SystemInfoImpl();
-    this.commandletManager = CommandletManagerImpl.getOrCreate(this);
+    setLogLevel(minLogLevel);
+    this.systemInfo = SystemInfoImpl.INSTANCE;
+    this.commandletManager = new CommandletManagerImpl(this);
     this.fileAccess = new FileAccessImpl(this);
     String workspace = WORKSPACE_MAIN;
     if (userDir == null) {
-      this.cwd = Paths.get(System.getProperty("user.dir"));
+      userDir = Path.of(System.getProperty("user.dir"));
     } else {
-      this.cwd = userDir.toAbsolutePath();
+      userDir = userDir.toAbsolutePath();
     }
     // detect IDE_HOME and WORKSPACE
-    Path currentDir = this.cwd;
+    Path currentDir = userDir;
     String name1 = "";
     String name2 = "";
     while (currentDir != null) {
@@ -155,43 +171,32 @@ public abstract class AbstractIdeContext implements IdeContext {
       currentDir = getParentPath(currentDir);
     }
     // detection completed, initializing variables
-    this.ideHome = currentDir;
-    this.workspaceName = workspace;
-    if (this.ideHome == null) {
+    setCwd(userDir, workspace, currentDir);
+    Path ideRootPath = null;
+    if (currentDir == null) {
       info(getMessageIdeHomeNotFound());
-      this.workspacePath = null;
-      this.ideRoot = null;
-      this.confPath = null;
-      this.settingsPath = null;
-      this.softwarePath = null;
-      this.pluginsPath = null;
     } else {
       debug(getMessageIdeHomeFound());
-      this.workspacePath = this.ideHome.resolve(FOLDER_WORKSPACES).resolve(this.workspaceName);
-      Path ideRootPath = this.ideHome.getParent();
-      String root = null;
-      if (!isTest()) {
-        root = System.getenv("IDE_ROOT");
-      }
+      ideRootPath = this.ideHome.getParent();
+    }
+
+    if (!isTest()) {
+      String root = System.getenv("IDE_ROOT");
       if (root != null) {
-        Path rootPath = Paths.get(root);
-        if (Files.isDirectory(rootPath)) {
-          if (!ideRootPath.equals(rootPath)) {
-            warning("Variable IDE_ROOT is set to '{}' but for your project '{}' would have been expected.");
-            ideRootPath = rootPath;
-          }
-          ideRootPath = this.ideHome.getParent();
-        } else {
-          warning("Variable IDE_ROOT is not set to a valid directory '{}'." + root);
-          ideRootPath = null;
+        Path rootPath = Path.of(root);
+        if (ideRootPath == null) {
+          ideRootPath = rootPath;
+        } else if (!ideRootPath.equals(rootPath)) {
+          warning("Variable IDE_ROOT is set to '{}' but for your project '{}' the path '{}' would have been expected.", rootPath, this.ideHome.getFileName(),
+              ideRootPath);
         }
       }
-      this.ideRoot = ideRootPath;
-      this.confPath = this.ideHome.resolve(FOLDER_CONF);
-      this.settingsPath = this.ideHome.resolve(FOLDER_SETTINGS);
-      this.softwarePath = this.ideHome.resolve(FOLDER_SOFTWARE);
-      this.pluginsPath = this.ideHome.resolve(FOLDER_PLUGINS);
     }
+    if (ideRootPath == null || !Files.isDirectory(ideRootPath)) {
+      error("IDE_ROOT is not set or not a valid directory.");
+    }
+    this.ideRoot = ideRootPath;
+
     if (this.ideRoot == null) {
       this.toolRepository = null;
       this.urlsPath = null;
@@ -211,21 +216,48 @@ public abstract class AbstractIdeContext implements IdeContext {
         this.fileAccess.mkdirs(this.tempDownloadPath);
       }
     }
+
+    if (toolRepository == null) {
+      this.defaultToolRepository = new DefaultToolRepository(this);
+    } else {
+      this.defaultToolRepository = toolRepository;
+    }
+  }
+
+  @Override
+  public void setCwd(Path userDir, String workspace, Path ideHome) {
+
+    this.cwd = userDir;
+    this.workspaceName = workspace;
+    this.ideHome = ideHome;
+    if (ideHome == null) {
+      this.workspacePath = null;
+      this.confPath = null;
+      this.settingsPath = null;
+      this.softwarePath = null;
+      this.pluginsPath = null;
+    } else {
+      this.workspacePath = this.ideHome.resolve(FOLDER_WORKSPACES).resolve(this.workspaceName);
+      this.confPath = this.ideHome.resolve(FOLDER_CONF);
+      this.settingsPath = this.ideHome.resolve(FOLDER_SETTINGS);
+      this.softwarePath = this.ideHome.resolve(FOLDER_SOFTWARE);
+      this.pluginsPath = this.ideHome.resolve(FOLDER_PLUGINS);
+    }
     if (isTest()) {
       // only for testing...
       if (this.ideHome == null) {
-        this.userHome = Paths.get("/non-existing-user-home-for-testing");
+        this.userHome = Path.of("/non-existing-user-home-for-testing");
       } else {
         this.userHome = this.ideHome.resolve("home");
       }
     } else {
-      this.userHome = Paths.get(System.getProperty("user.home"));
+      this.userHome = Path.of(System.getProperty("user.home"));
     }
     this.userHomeIde = this.userHome.resolve(".ide");
     this.downloadPath = this.userHome.resolve("Downloads/ide");
+
     this.variables = createVariables();
     this.path = computeSystemPath();
-    this.defaultToolRepository = new DefaultToolRepository(this);
     this.customToolRepository = CustomToolRepositoryImpl.of(this);
     this.workspaceMerger = new DirectoryMerger(this);
   }
@@ -241,8 +273,7 @@ public abstract class AbstractIdeContext implements IdeContext {
   }
 
   /**
-   * @return the status message about the {@link #getIdeHome() IDE_HOME} detection and environment variable
-   *         initialization.
+   * @return the status message about the {@link #getIdeHome() IDE_HOME} detection and environment variable initialization.
    */
   public String getMessageIdeHome() {
 
@@ -257,10 +288,7 @@ public abstract class AbstractIdeContext implements IdeContext {
    */
   public boolean isTest() {
 
-    if (isMock()) {
-      return true;
-    }
-    return false;
+    return isMock();
   }
 
   /**
@@ -273,18 +301,14 @@ public abstract class AbstractIdeContext implements IdeContext {
 
   private SystemPath computeSystemPath() {
 
-    String systemPath = System.getenv(IdeVariables.PATH.getName());
-    return new SystemPath(systemPath, this.softwarePath, this);
+    return new SystemPath(this);
   }
 
   private boolean isIdeHome(Path dir) {
 
-    if (!Files.isRegularFile(dir.resolve("setup"))) {
+    if (!Files.isDirectory(dir.resolve("workspaces"))) {
       return false;
-    } else if (!Files.isDirectory(dir.resolve("scripts"))) {
-      return false;
-    } else if (dir.toString().endsWith("/scripts/src/main/resources")) {
-      // TODO does this still make sense for our new Java based product?
+    } else if (!Files.isDirectory(dir.resolve("settings"))) {
       return false;
     }
     return true;
@@ -311,14 +335,12 @@ public abstract class AbstractIdeContext implements IdeContext {
     AbstractEnvironmentVariables user = extendVariables(system, this.userHomeIde, EnvironmentVariablesType.USER);
     AbstractEnvironmentVariables settings = extendVariables(user, this.settingsPath, EnvironmentVariablesType.SETTINGS);
     // TODO should we keep this workspace properties? Was this feature ever used?
-    AbstractEnvironmentVariables workspace = extendVariables(settings, this.workspacePath,
-        EnvironmentVariablesType.WORKSPACE);
+    AbstractEnvironmentVariables workspace = extendVariables(settings, this.workspacePath, EnvironmentVariablesType.WORKSPACE);
     AbstractEnvironmentVariables conf = extendVariables(workspace, this.confPath, EnvironmentVariablesType.CONF);
     return conf.resolved();
   }
 
-  private AbstractEnvironmentVariables extendVariables(AbstractEnvironmentVariables envVariables, Path propertiesPath,
-      EnvironmentVariablesType type) {
+  private AbstractEnvironmentVariables extendVariables(AbstractEnvironmentVariables envVariables, Path propertiesPath, EnvironmentVariablesType type) {
 
     Path propertiesFile = null;
     if (propertiesPath == null) {
@@ -372,6 +394,15 @@ public abstract class AbstractIdeContext implements IdeContext {
   public Path getIdeHome() {
 
     return this.ideHome;
+  }
+
+  @Override
+  public String getProjectName() {
+
+    if (this.ideHome != null) {
+      return this.ideHome.getFileName().toString();
+    }
+    return "";
   }
 
   @Override
@@ -487,7 +518,7 @@ public abstract class AbstractIdeContext implements IdeContext {
 
     if (this.urlMetadata == null) {
       if (!isTest()) {
-        gitPullOrClone(this.urlsPath, "https://github.com/devonfw/ide-urls.git");
+        getGitContext().pullOrCloneAndResetIfNeeded(IDE_URLS_GIT, this.urlsPath, null);
       }
       this.urlMetadata = new UrlMetadata(this);
     }
@@ -557,7 +588,7 @@ public abstract class AbstractIdeContext implements IdeContext {
     try {
       int timeout = 1000;
       online = InetAddress.getByName("github.com").isReachable(timeout);
-    } catch (Exception e) {
+    } catch (Exception ignored) {
 
     }
     return online;
@@ -586,70 +617,47 @@ public abstract class AbstractIdeContext implements IdeContext {
     return this.workspaceMerger;
   }
 
-  @Override
-  public ProcessContext newProcess() {
+  /**
+   * @return the {@link #getDefaultExecutionDirectory() default execution directory} in which a command process is executed.
+   */
+  public Path getDefaultExecutionDirectory() {
 
-    ProcessContext processContext = new ProcessContextImpl(this);
-    return processContext;
+    return this.defaultExecutionDirectory;
+  }
+
+  /**
+   * @param defaultExecutionDirectory new value of {@link #getDefaultExecutionDirectory()}.
+   */
+  public void setDefaultExecutionDirectory(Path defaultExecutionDirectory) {
+
+    if (defaultExecutionDirectory != null) {
+      this.defaultExecutionDirectory = defaultExecutionDirectory;
+    }
   }
 
   @Override
-  public void gitPullOrClone(Path target, String gitRepoUrl) {
+  public GitContext getGitContext() {
 
-    Objects.requireNonNull(target);
-    Objects.requireNonNull(gitRepoUrl);
-    if (!gitRepoUrl.startsWith("http")) {
-      throw new IllegalArgumentException("Invalid git URL '" + gitRepoUrl + "'!");
+    return new GitContextImpl(this);
+  }
+
+  @Override
+  public ProcessContext newProcess() {
+
+    ProcessContext processContext = createProcessContext();
+    if (this.defaultExecutionDirectory != null) {
+      processContext.directory(this.defaultExecutionDirectory);
     }
-    ProcessContext pc = newProcess().directory(target).executable("git");
-    if (Files.isDirectory(target.resolve(".git"))) {
-      ProcessResult result = pc.addArg("remote").run(true);
-      List<String> remotes = result.getOut();
-      if (remotes.isEmpty()) {
-        String message = "This is a local git repo with no remote - if you did this for testing, you may continue...\n"
-            + "Do you want to ignore the problem and continue anyhow?";
-        askToContinue(message);
-      } else {
-        pc.errorHandling(ProcessErrorHandling.WARNING);
-        result = pc.addArg("pull").run(false);
-        if (!result.isSuccessful()) {
-          String message = "Failed to update git repository at " + target;
-          if (this.offlineMode) {
-            warning(message);
-            interaction("Continuing as we are in offline mode - results may be outdated!");
-          } else {
-            error(message);
-            if (isOnline()) {
-              error("See above error for details. If you have local changes, please stash or revert and retry.");
-            } else {
-              error(
-                  "It seems you are offline - please ensure Internet connectivity and retry or activate offline mode (-o or --offline).");
-            }
-            askToContinue("Typically you should abort and fix the problem. Do you want to continue anyways?");
-          }
-        }
-      }
-    } else {
-      String branch = null;
-      int hashIndex = gitRepoUrl.indexOf("#");
-      if (hashIndex != -1) {
-        branch = gitRepoUrl.substring(hashIndex + 1);
-        gitRepoUrl = gitRepoUrl.substring(0, hashIndex);
-      }
-      this.fileAccess.mkdirs(target);
-      requireOnline("git clone of " + gitRepoUrl);
-      pc.addArg("clone");
-      if (isQuietMode()) {
-        pc.addArg("-q");
-      } else {
-      }
-      pc.addArgs("--recursive", gitRepoUrl, "--config", "core.autocrlf=false", ".");
-      pc.run();
-      if (branch != null) {
-        pc.addArgs("checkout", branch);
-        pc.run();
-      }
-    }
+    return processContext;
+  }
+
+  /**
+   * @return a new instance of {@link ProcessContext}.
+   * @see #newProcess()
+   */
+  protected ProcessContext createProcessContext() {
+
+    return new ProcessContextImpl(this);
   }
 
   @Override
@@ -658,6 +666,23 @@ public abstract class AbstractIdeContext implements IdeContext {
     IdeSubLogger logger = this.loggers.get(level);
     Objects.requireNonNull(logger);
     return logger;
+  }
+
+  @Override
+  public String askForInput(String message, String defaultValue) {
+
+    if (!message.isBlank()) {
+      info(message);
+    }
+    if (isBatchMode()) {
+      if (isForceMode()) {
+        return defaultValue;
+      } else {
+        throw new CliAbortException();
+      }
+    }
+    String input = readLine().trim();
+    return input.isEmpty() ? defaultValue : input;
   }
 
   @SuppressWarnings("unchecked")
@@ -709,6 +734,269 @@ public abstract class AbstractIdeContext implements IdeContext {
     if (duplicate != null) {
       throw new IllegalArgumentException("Duplicated option " + key);
     }
+  }
+
+  /**
+   * Sets the log level.
+   *
+   * @param logLevel {@link IdeLogLevel}
+   */
+  public void setLogLevel(IdeLogLevel logLevel) {
+
+    for (IdeLogLevel level : IdeLogLevel.values()) {
+      IdeSubLogger logger;
+      if (level.ordinal() < logLevel.ordinal()) {
+        logger = new IdeSubLoggerNone(level);
+      } else {
+        logger = this.loggerFactory.apply(level);
+      }
+      this.loggers.put(level, logger);
+    }
+  }
+
+  @Override
+  public Step getCurrentStep() {
+
+    return this.currentStep;
+  }
+
+  @Override
+  public StepImpl newStep(boolean silent, String name, Object... parameters) {
+
+    this.currentStep = new StepImpl(this, this.currentStep, name, silent, parameters);
+    return this.currentStep;
+  }
+
+  /**
+   * Internal method to end the running {@link Step}.
+   *
+   * @param step the current {@link Step} to end.
+   */
+  public void endStep(StepImpl step) {
+
+    if (step == this.currentStep) {
+      this.currentStep = this.currentStep.getParent();
+    } else {
+      String currentStepName = "null";
+      if (this.currentStep != null) {
+        currentStepName = this.currentStep.getName();
+      }
+      warning("endStep called with wrong step '{}' but expected '{}'", step.getName(), currentStepName);
+    }
+  }
+
+  /**
+   * Finds the matching {@link Commandlet} to run, applies {@link CliArguments} to its {@link Commandlet#getProperties() properties} and will execute it.
+   *
+   * @param arguments the {@link CliArgument}.
+   * @return the return code of the execution.
+   */
+  public int run(CliArguments arguments) {
+
+    CliArgument current = arguments.current();
+    assert (this.currentStep == null);
+    boolean supressStepSuccess = false;
+    StepImpl step = newStep(true, "ide", (Object[]) current.asArray());
+    try {
+      if (!current.isEnd()) {
+        String keyword = current.get();
+        Commandlet firstCandidate = this.commandletManager.getCommandletByFirstKeyword(keyword);
+        boolean matches;
+        if (firstCandidate != null) {
+          matches = applyAndRun(arguments.copy(), firstCandidate);
+          if (matches) {
+            supressStepSuccess = firstCandidate.isSuppressStepSuccess();
+            step.success();
+            return ProcessResult.SUCCESS;
+          }
+        }
+        for (Commandlet cmd : this.commandletManager.getCommandlets()) {
+          if (cmd != firstCandidate) {
+            matches = applyAndRun(arguments.copy(), cmd);
+            if (matches) {
+              supressStepSuccess = cmd.isSuppressStepSuccess();
+              step.success();
+              return ProcessResult.SUCCESS;
+            }
+          }
+        }
+        step.error("Invalid arguments: {}", current.getArgs());
+      }
+      this.commandletManager.getCommandlet(HelpCommandlet.class).run();
+      return 1;
+    } catch (Throwable t) {
+      step.error(t, true);
+      throw t;
+    } finally {
+      step.end();
+      assert (this.currentStep == null);
+      step.logSummary(supressStepSuccess);
+    }
+  }
+
+  /**
+   * @param cmd the potential {@link Commandlet} to {@link #apply(CliArguments, Commandlet, CompletionCandidateCollector) apply} and
+   * {@link Commandlet#run() run}.
+   * @return {@code true} if the given {@link Commandlet} matched and did {@link Commandlet#run() run} successfully, {@code false} otherwise (the
+   * {@link Commandlet} did not match and we have to try a different candidate).
+   */
+  private boolean applyAndRun(CliArguments arguments, Commandlet cmd) {
+
+    boolean matches = apply(arguments, cmd, null);
+    if (matches) {
+      matches = cmd.validate();
+    }
+    if (matches) {
+      debug("Running commandlet {}", cmd);
+      if (cmd.isIdeHomeRequired() && (this.ideHome == null)) {
+        throw new CliException(getMessageIdeHomeNotFound());
+      }
+      cmd.run();
+    } else {
+      trace("Commandlet did not match");
+    }
+    return matches;
+  }
+
+  /**
+   * @param arguments the {@link CliArguments#ofCompletion(String...) completion arguments}.
+   * @param includeContextOptions to include the options of {@link ContextCommandlet}.
+   * @return the {@link List} of {@link CompletionCandidate}s to suggest.
+   */
+  public List<CompletionCandidate> complete(CliArguments arguments, boolean includeContextOptions) {
+
+    CompletionCandidateCollector collector = new CompletionCandidateCollectorDefault(this);
+    if (arguments.current().isStart()) {
+      arguments.next();
+    }
+    if (includeContextOptions) {
+      ContextCommandlet cc = new ContextCommandlet();
+      for (Property<?> property : cc.getProperties()) {
+        assert (property.isOption());
+        property.apply(arguments, this, cc, collector);
+      }
+    }
+    CliArgument current = arguments.current();
+    if (!current.isEnd()) {
+      String keyword = current.get();
+      Commandlet firstCandidate = this.commandletManager.getCommandletByFirstKeyword(keyword);
+      boolean matches = false;
+      if (firstCandidate != null) {
+        matches = apply(arguments.copy(), firstCandidate, collector);
+      } else if (current.isCombinedShortOption()) {
+        collector.add(keyword, null, null, null);
+      }
+      if (!matches) {
+        for (Commandlet cmd : this.commandletManager.getCommandlets()) {
+          if (cmd != firstCandidate) {
+            apply(arguments.copy(), cmd, collector);
+          }
+        }
+      }
+    }
+    return collector.getSortedCandidates();
+  }
+
+  /**
+   * @param arguments the {@link CliArguments} to apply. Will be {@link CliArguments#next() consumed} as they are matched. Consider passing a
+   * {@link CliArguments#copy() copy} as needed.
+   * @param cmd the potential {@link Commandlet} to match.
+   * @param collector the {@link CompletionCandidateCollector}.
+   * @return {@code true} if the given {@link Commandlet} matches to the given {@link CliArgument}(s) and those have been applied (set in the {@link Commandlet}
+   * and {@link Commandlet#validate() validated}), {@code false} otherwise (the {@link Commandlet} did not match and we have to try a different candidate).
+   */
+  public boolean apply(CliArguments arguments, Commandlet cmd, CompletionCandidateCollector collector) {
+
+    trace("Trying to match arguments to commandlet {}", cmd.getName());
+    CliArgument currentArgument = arguments.current();
+    Iterator<Property<?>> propertyIterator;
+    if (currentArgument.isCompletion()) {
+      propertyIterator = cmd.getProperties().iterator();
+    } else {
+      propertyIterator = cmd.getValues().iterator();
+    }
+    while (!currentArgument.isEnd()) {
+      trace("Trying to match argument '{}'", currentArgument);
+      Property<?> property = null;
+      if (!arguments.isEndOptions()) {
+        property = cmd.getOption(currentArgument.getKey());
+      }
+      if (property == null) {
+        if (!propertyIterator.hasNext()) {
+          trace("No option or next value found");
+          return false;
+        }
+        property = propertyIterator.next();
+      }
+      trace("Next property candidate to match argument is {}", property);
+      boolean matches = property.apply(arguments, this, cmd, collector);
+      if (!matches || currentArgument.isCompletion()) {
+        return false;
+      }
+      currentArgument = arguments.current();
+    }
+    return true;
+  }
+
+  public String findBash() {
+
+    String bash = "bash";
+    if (SystemInfoImpl.INSTANCE.isWindows()) {
+      bash = findBashOnWindows();
+    }
+
+    return bash;
+  }
+
+  private String findBashOnWindows() {
+
+    // Check if Git Bash exists in the default location
+    Path defaultPath = Path.of("C:\\Program Files\\Git\\bin\\bash.exe");
+    if (Files.exists(defaultPath)) {
+      return defaultPath.toString();
+    }
+
+    // If not found in the default location, try the registry query
+    String[] bashVariants = { "GitForWindows", "Cygwin\\setup" };
+    String[] registryKeys = { "HKEY_LOCAL_MACHINE", "HKEY_CURRENT_USER" };
+    String regQueryResult;
+    for (String bashVariant : bashVariants) {
+      for (String registryKey : registryKeys) {
+        String toolValueName = ("GitForWindows".equals(bashVariant)) ? "InstallPath" : "rootdir";
+        String command = "reg query " + registryKey + "\\Software\\" + bashVariant + "  /v " + toolValueName + " 2>nul";
+
+        try {
+          Process process = new ProcessBuilder("cmd.exe", "/c", command).start();
+          try (BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()))) {
+            StringBuilder output = new StringBuilder();
+            String line;
+
+            while ((line = reader.readLine()) != null) {
+              output.append(line);
+            }
+
+            int exitCode = process.waitFor();
+            if (exitCode != 0) {
+              return null;
+            }
+
+            regQueryResult = output.toString();
+            if (regQueryResult != null) {
+              int index = regQueryResult.indexOf("REG_SZ");
+              if (index != -1) {
+                String path = regQueryResult.substring(index + "REG_SZ".length()).trim();
+                return path + "\\bin\\bash.exe";
+              }
+            }
+
+          }
+        } catch (Exception e) {
+          return null;
+        }
+      }
+    }
+    // no bash found
+    throw new IllegalStateException("Could not find Bash. Please install Git for Windows and rerun.");
   }
 
 }
