@@ -1,11 +1,11 @@
 package com.devonfw.tools.ide.environment;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.Locale;
 
 import com.devonfw.tools.ide.context.IdeContext;
+import com.devonfw.tools.ide.variable.VariableDefinition;
 import com.devonfw.tools.ide.version.VersionIdentifier;
 
 /**
@@ -24,6 +24,18 @@ public interface EnvironmentVariables {
    * @return the value of the variable with the given {@code name}. Will be {@code null} if no such variable is defined.
    */
   default String get(String name) {
+
+    return get(name, false);
+  }
+
+  /**
+   * @param name the name of the environment variable to get.
+   * @param ignoreDefaultValue - {@code true} if the {@link VariableDefinition#getDefaultValue(IdeContext) default
+   *        value} of a potential {@link VariableDefinition} shall be ignored, {@code false} to return default instead
+   *        of {@code null}.
+   * @return the value of the variable with the given {@code name}. Will be {@code null} if no such variable is defined.
+   */
+  default String get(String name, boolean ignoreDefaultValue) {
 
     String value = getFlat(name);
     if (value == null) {
@@ -46,7 +58,7 @@ public interface EnvironmentVariables {
     if (value == null) {
       return null;
     }
-    return Paths.get(value);
+    return Path.of(value);
   }
 
   /**
@@ -224,6 +236,15 @@ public interface EnvironmentVariables {
   static String getToolVersionVariable(String tool) {
 
     return tool.toUpperCase(Locale.ROOT) + "_VERSION";
+  }
+
+  /**
+   * @param tool the name of the tool.
+   * @return the name of the edition variable.
+   */
+  static String getToolEditionVariable(String tool) {
+
+    return tool.toUpperCase(Locale.ROOT) + "_EDITION";
   }
 
 }
