@@ -1,5 +1,19 @@
 package com.devonfw.tools.ide.io;
 
+import com.devonfw.tools.ide.cli.CliException;
+import com.devonfw.tools.ide.context.IdeContext;
+import com.devonfw.tools.ide.os.SystemInfoImpl;
+import com.devonfw.tools.ide.process.ProcessContext;
+import com.devonfw.tools.ide.url.model.file.UrlChecksum;
+import com.devonfw.tools.ide.util.DateTimeUtil;
+import com.devonfw.tools.ide.util.FilenameUtil;
+import com.devonfw.tools.ide.util.HexUtil;
+import org.apache.commons.compress.archivers.ArchiveEntry;
+import org.apache.commons.compress.archivers.ArchiveInputStream;
+import org.apache.commons.compress.archivers.tar.TarArchiveEntry;
+import org.apache.commons.compress.archivers.tar.TarArchiveInputStream;
+import org.apache.commons.compress.archivers.zip.ZipArchiveInputStream;
+
 import java.io.BufferedOutputStream;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
@@ -16,8 +30,9 @@ import java.nio.file.Files;
 import java.nio.file.LinkOption;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.attribute.BasicFileAttributes;
+import java.nio.file.attribute.PosixFilePermission;
+import java.nio.file.attribute.PosixFilePermissions;
 import java.security.DigestInputStream;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
@@ -25,19 +40,11 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Set;
+import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Stream;
-
-import org.apache.commons.compress.archivers.ArchiveEntry;
-import org.apache.commons.compress.archivers.ArchiveInputStream;
-import org.apache.commons.compress.archivers.tar.TarArchiveInputStream;
-import org.apache.commons.compress.archivers.zip.ZipArchiveInputStream;
-
-import com.devonfw.tools.ide.context.IdeContext;
-import com.devonfw.tools.ide.url.model.file.UrlChecksum;
-import com.devonfw.tools.ide.util.DateTimeUtil;
-import com.devonfw.tools.ide.util.HexUtil;
 
 /**
  * Implementation of {@link FileAccess}.
@@ -78,7 +85,7 @@ public class FileAccessImpl implements FileAccess {
       } else if (url.startsWith("ftp") || url.startsWith("sftp")) {
         throw new IllegalArgumentException("Unsupported download URL: " + url);
       } else {
-        Path source = Paths.get(url);
+        Path source = Path.of(url);
         if (isFile(source)) {
           // network drive
           copyFileWithProgressBar(source, target);
@@ -98,14 +105,11 @@ public class FileAccessImpl implements FileAccess {
    * @param target Path of the target directory.
    * @param response the {@link HttpResponse} to use.
    */
-  private void downloadFileWithProgressBar(String url, Path target, HttpResponse<InputStream> response)
-      throws IOException {
+  private void downloadFileWithProgressBar(String url, Path target, HttpResponse<InputStream> response) throws IOException {
 
     long contentLength = response.headers().firstValueAsLong("content-length").orElse(0);
     if (contentLength == 0) {
-      this.context.warning(
-          "Content-Length was not provided by download source : {} using fallback for the progress bar which will be inaccurate.",
-          url);
+      this.context.warning("Content-Length was not provided by download source : {} using fallback for the progress bar which will be inaccurate.", url);
       contentLength = 10000000;
     }
 
@@ -139,8 +143,7 @@ public class FileAccessImpl implements FileAccess {
    */
   private void copyFileWithProgressBar(Path source, Path target) throws IOException {
 
-    try (InputStream in = new FileInputStream(source.toFile());
-        OutputStream out = new FileOutputStream(target.toFile())) {
+    try (InputStream in = new FileInputStream(source.toFile()); OutputStream out = new FileOutputStream(target.toFile())) {
 
       long size = source.toFile().length();
       byte[] buf = new byte[1024];
@@ -217,21 +220,40 @@ public class FileAccessImpl implements FileAccess {
     }
   }
 
+  private boolean isJunction(Path path) {
+
+    if (!SystemInfoImpl.INSTANCE.isWindows()) {
+      return false;
+    }
+
+    try {
+      BasicFileAttributes attr = Files.readAttributes(path, BasicFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
+      return attr.isOther() && attr.isDirectory();
+    } catch (NoSuchFileException e) {
+      return false; // file doesn't exist
+    } catch (IOException e) {
+      // errors in reading the attributes of the file
+      throw new IllegalStateException("An unexpected error occurred whilst checking if the file: " + path + " is a junction", e);
+    }
+  }
+
   @Override
   public void backup(Path fileOrFolder) {
 
-    if (Files.isSymbolicLink(fileOrFolder)) {
+    if (Files.isSymbolicLink(fileOrFolder) || isJunction(fileOrFolder)) {
       delete(fileOrFolder);
+    } else {
+      // fileOrFolder is a directory
+      Path backupPath = this.context.getIdeHome().resolve(IdeContext.FOLDER_UPDATES).resolve(IdeContext.FOLDER_BACKUPS);
+      LocalDateTime now = LocalDateTime.now();
+      String date = DateTimeUtil.formatDate(now);
+      String time = DateTimeUtil.formatTime(now);
+      Path backupDatePath = backupPath.resolve(date);
+      mkdirs(backupDatePath);
+      Path target = backupDatePath.resolve(fileOrFolder.getFileName().toString() + "_" + time);
+      this.context.info("Creating backup by moving {} to {}", fileOrFolder, target);
+      move(fileOrFolder, target);
     }
-    Path backupPath = this.context.getIdeHome().resolve(IdeContext.FOLDER_UPDATES).resolve(IdeContext.FOLDER_BACKUPS);
-    LocalDateTime now = LocalDateTime.now();
-    String date = DateTimeUtil.formatDate(now);
-    String time = DateTimeUtil.formatTime(now);
-    Path backupDatePath = backupPath.resolve(date);
-    mkdirs(backupDatePath);
-    Path target = backupDatePath.resolve(fileOrFolder.getFileName().toString() + "_" + time);
-    this.context.info("Creating backup by moving {} to {}", fileOrFolder, target);
-    move(fileOrFolder, target);
   }
 
   @Override
@@ -251,6 +273,15 @@ public class FileAccessImpl implements FileAccess {
     boolean fileOnly = mode.isFileOnly();
     if (fileOnly) {
       this.context.debug("Copying file {} to {}", source, target);
+      if (Files.isDirectory(target)) {
+        // if we want to copy "file.txt" to the existing folder "path/to/folder/" in a shell this will copy "file.txt"
+        // into that folder
+        // with Java NIO the raw copy method will fail as we cannot copy the file to the path of the target folder
+        // even worse if FileCopyMode is override the target folder ("path/to/folder/") would be deleted and the result
+        // of our "file.txt" would later appear in "path/to/folder". To prevent such bugs we append the filename to
+        // target
+        target = target.resolve(source.getFileName());
+      }
     } else {
       this.context.debug("Copying {} recursively to {}", source, target);
     }
@@ -283,7 +314,7 @@ public class FileAccessImpl implements FileAccess {
         }
       }
     } else if (Files.exists(source)) {
-      if (mode == FileCopyMode.COPY_TREE_OVERRIDE_FILES) {
+      if (mode.isOverrideFile()) {
         delete(target);
       }
       this.context.trace("Copying {} to {}", source, target);
@@ -294,51 +325,31 @@ public class FileAccessImpl implements FileAccess {
   }
 
   /**
-   * Deletes the given {@link Path} if it is a symbolic link or a Windows junction. And throws an
-   * {@link IllegalStateException} if there is a file at the given {@link Path} that is neither a symbolic link nor a
-   * Windows junction.
+   * Deletes the given {@link Path} if it is a symbolic link or a Windows junction. And throws an {@link IllegalStateException} if there is a file at the given
+   * {@link Path} that is neither a symbolic link nor a Windows junction.
    *
    * @param path the {@link Path} to delete.
    * @throws IOException if the actual {@link Files#delete(Path) deletion} fails.
    */
   private void deleteLinkIfExists(Path path) throws IOException {
 
-    boolean exists = false;
-    boolean isJunction = false;
-    if (this.context.getSystemInfo().isWindows()) {
-      try { // since broken junctions are not detected by Files.exists(brokenJunction)
-        BasicFileAttributes attr = Files.readAttributes(path, BasicFileAttributes.class, LinkOption.NOFOLLOW_LINKS);
-        exists = true;
-        isJunction = attr.isOther() && attr.isDirectory();
-      } catch (NoSuchFileException e) {
-        // ignore, since there is no previous file at the location, so nothing to delete
-        return;
-      }
-    }
-    exists = exists || Files.exists(path); // "||" since broken junctions are not detected by
-                                           // Files.exists(brokenJunction)
-    boolean isSymlink = exists && Files.isSymbolicLink(path);
+    boolean isJunction = isJunction(path); // since broken junctions are not detected by Files.exists()
+    boolean isSymlink = Files.exists(path) && Files.isSymbolicLink(path);
 
     assert !(isSymlink && isJunction);
 
-    if (exists) {
-      if (isJunction || isSymlink) {
-        this.context.info("Deleting previous " + (isJunction ? "junction" : "symlink") + " at " + path);
-        Files.delete(path);
-      } else {
-        throw new IllegalStateException(
-            "The file at " + path + " was not deleted since it is not a symlink or a Windows junction");
-      }
+    if (isJunction || isSymlink) {
+      this.context.info("Deleting previous " + (isJunction ? "junction" : "symlink") + " at " + path);
+      Files.delete(path);
     }
   }
 
   /**
-   * Adapts the given {@link Path} to be relative or absolute depending on the given {@code relative} flag.
-   * Additionally, {@link Path#toRealPath(LinkOption...)} is applied to {@code source}.
+   * Adapts the given {@link Path} to be relative or absolute depending on the given {@code relative} flag. Additionally, {@link Path#toRealPath(LinkOption...)}
+   * is applied to {@code source}.
    *
    * @param source the {@link Path} to adapt.
-   * @param targetLink the {@link Path} used to calculate the relative path to the {@code source} if {@code relative} is
-   *        set to {@code true}.
+   * @param targetLink the {@link Path} used to calculate the relative path to the {@code source} if {@code relative} is set to {@code true}.
    * @param relative the {@code relative} flag.
    * @return the adapted {@link Path}.
    * @see FileAccessImpl#symlink(Path, Path, boolean)
@@ -349,27 +360,24 @@ public class FileAccessImpl implements FileAccess {
       try {
         source = source.toRealPath(LinkOption.NOFOLLOW_LINKS); // to transform ../d1/../d2 to ../d2
       } catch (IOException e) {
-        throw new IOException(
-            "Calling toRealPath() on the source (" + source + ") in method FileAccessImpl.adaptPath() failed.", e);
+        throw new IOException("Calling toRealPath() on the source (" + source + ") in method FileAccessImpl.adaptPath() failed.", e);
       }
       if (relative) {
         source = targetLink.getParent().relativize(source);
         // to make relative links like this work: dir/link -> dir
-        source = (source.toString().isEmpty()) ? Paths.get(".") : source;
+        source = (source.toString().isEmpty()) ? Path.of(".") : source;
       }
     } else { // source is relative
       if (relative) {
         // even though the source is already relative, toRealPath should be called to transform paths like
         // this ../d1/../d2 to ../d2
-        source = targetLink.getParent()
-            .relativize(targetLink.resolveSibling(source).toRealPath(LinkOption.NOFOLLOW_LINKS));
-        source = (source.toString().isEmpty()) ? Paths.get(".") : source;
+        source = targetLink.getParent().relativize(targetLink.resolveSibling(source).toRealPath(LinkOption.NOFOLLOW_LINKS));
+        source = (source.toString().isEmpty()) ? Path.of(".") : source;
       } else { // !relative
         try {
           source = targetLink.resolveSibling(source).toRealPath(LinkOption.NOFOLLOW_LINKS);
         } catch (IOException e) {
-          throw new IOException("Calling toRealPath() on " + targetLink + ".resolveSibling(" + source
-              + ") in method FileAccessImpl.adaptPath() failed.", e);
+          throw new IOException("Calling toRealPath() on " + targetLink + ".resolveSibling(" + source + ") in method FileAccessImpl.adaptPath() failed.", e);
         }
       }
     }
@@ -378,7 +386,7 @@ public class FileAccessImpl implements FileAccess {
 
   /**
    * Creates a Windows junction at {@code targetLink} pointing to {@code source}.
-   * 
+   *
    * @param source must be another Windows junction or a directory.
    * @param targetLink the location of the Windows junction.
    */
@@ -387,17 +395,14 @@ public class FileAccessImpl implements FileAccess {
     this.context.trace("Creating a Windows junction at " + targetLink + " with " + source + " as source.");
     Path fallbackPath;
     if (!source.isAbsolute()) {
-      this.context.warning(
-          "You are on Windows and you do not have permissions to create symbolic links. Junctions are used as an "
-              + "alternative, however, these can not point to relative paths. So the source (" + source
-              + ") is interpreted as an absolute path.");
+      this.context.warning("You are on Windows and you do not have permissions to create symbolic links. Junctions are used as an "
+          + "alternative, however, these can not point to relative paths. So the source (" + source + ") is interpreted as an absolute path.");
       try {
         fallbackPath = targetLink.resolveSibling(source).toRealPath(LinkOption.NOFOLLOW_LINKS);
       } catch (IOException e) {
         throw new IllegalStateException(
-            "Since Windows junctions are used, the source must be an absolute path. The transformation of the passed "
-                + "source (" + source + ") to an absolute path failed.",
-            e);
+            "Since Windows junctions are used, the source must be an absolute path. The transformation of the passed " + "source (" + source
+                + ") to an absolute path failed.", e);
       }
 
     } else {
@@ -405,11 +410,9 @@ public class FileAccessImpl implements FileAccess {
     }
     if (!Files.isDirectory(fallbackPath)) { // if source is a junction. This returns true as well.
       throw new IllegalStateException(
-          "These junctions can only point to directories or other junctions. Please make sure that the source ("
-              + fallbackPath + ") is one of these.");
+          "These junctions can only point to directories or other junctions. Please make sure that the source (" + fallbackPath + ") is one of these.");
     }
-    this.context.newProcess().executable("cmd")
-        .addArgs("/c", "mklink", "/d", "/j", targetLink.toString(), fallbackPath.toString()).run();
+    this.context.newProcess().executable("cmd").addArgs("/c", "mklink", "/d", "/j", targetLink.toString(), fallbackPath.toString()).run();
   }
 
   @Override
@@ -419,11 +422,9 @@ public class FileAccessImpl implements FileAccess {
     try {
       adaptedSource = adaptPath(source, targetLink, relative);
     } catch (IOException e) {
-      throw new IllegalStateException("Failed to adapt source for source (" + source + ") target (" + targetLink
-          + ") and relative (" + relative + ")", e);
+      throw new IllegalStateException("Failed to adapt source for source (" + source + ") target (" + targetLink + ") and relative (" + relative + ")", e);
     }
-    this.context.trace("Creating {} symbolic link {} pointing to {}", adaptedSource.isAbsolute() ? "" : "relative",
-        targetLink, adaptedSource);
+    this.context.trace("Creating {} symbolic link {} pointing to {}", adaptedSource.isAbsolute() ? "" : "relative", targetLink, adaptedSource);
 
     try {
       deleteLinkIfExists(targetLink);
@@ -434,17 +435,17 @@ public class FileAccessImpl implements FileAccess {
     try {
       Files.createSymbolicLink(targetLink, adaptedSource);
     } catch (FileSystemException e) {
-      if (this.context.getSystemInfo().isWindows()) {
+      if (SystemInfoImpl.INSTANCE.isWindows()) {
         this.context.info("Due to lack of permissions, Microsoft's mklink with junction had to be used to create "
-            + "a Symlink. See https://github.com/devonfw/IDEasy/blob/main/documentation/symlinks.asciidoc for "
-            + "further details. Error was: " + e.getMessage());
+            + "a Symlink. See https://github.com/devonfw/IDEasy/blob/main/documentation/symlinks.asciidoc for " + "further details. Error was: "
+            + e.getMessage());
         createWindowsJunction(adaptedSource, targetLink);
       } else {
         throw new RuntimeException(e);
       }
     } catch (IOException e) {
-      throw new IllegalStateException("Failed to create a " + (adaptedSource.isAbsolute() ? "" : "relative")
-          + "symbolic link " + targetLink + " pointing to " + source, e);
+      throw new IllegalStateException(
+          "Failed to create a " + (adaptedSource.isAbsolute() ? "" : "relative") + "symbolic link " + targetLink + " pointing to " + source, e);
     }
   }
 
@@ -484,24 +485,137 @@ public class FileAccessImpl implements FileAccess {
   }
 
   @Override
-  public void unzip(Path file, Path targetDir) {
+  public void extract(Path archiveFile, Path targetDir, Consumer<Path> postExtractHook, boolean extract) {
 
-    unpack(file, targetDir, in -> new ZipArchiveInputStream(in));
+    if (Files.isDirectory(archiveFile)) {
+      Path properInstallDir = archiveFile; // getProperInstallationSubDirOf(archiveFile, archiveFile);
+      if (extract) {
+        this.context.warning("Found directory for download at {} hence copying without extraction!", archiveFile);
+        copy(properInstallDir, targetDir, FileCopyMode.COPY_TREE_OVERRIDE_TREE);
+      } else {
+        move(properInstallDir, targetDir);
+      }
+      postExtractHook(postExtractHook, properInstallDir);
+      return;
+    } else if (!extract) {
+      mkdirs(targetDir);
+      move(archiveFile, targetDir.resolve(archiveFile.getFileName()));
+      return;
+    }
+    Path tmpDir = createTempDir("extract-" + archiveFile.getFileName());
+    this.context.trace("Trying to extract the downloaded file {} to {} and move it to {}.", archiveFile, tmpDir, targetDir);
+    String filename = archiveFile.getFileName().toString();
+    TarCompression tarCompression = TarCompression.of(filename);
+    if (tarCompression != null) {
+      extractTar(archiveFile, tmpDir, tarCompression);
+    } else {
+      String extension = FilenameUtil.getExtension(filename);
+      if (extension == null) {
+        throw new IllegalStateException("Unknown archive format without extension - can not extract " + archiveFile);
+      } else {
+        this.context.trace("Determined file extension {}", extension);
+      }
+      switch (extension) {
+        case "zip", "jar" -> {
+          extractZip(archiveFile, tmpDir);
+        }
+        case "dmg" -> {
+          extractDmg(archiveFile, tmpDir);
+        }
+        case "msi" -> {
+          extractMsi(archiveFile, tmpDir);
+        }
+        case "pkg" -> {
+          extractPkg(archiveFile, tmpDir);
+        }
+        default -> {
+          throw new IllegalStateException("Unknown archive format " + extension + ". Can not extract " + archiveFile);
+        }
+      }
+    }
+    Path properInstallDir = getProperInstallationSubDirOf(tmpDir, archiveFile);
+    postExtractHook(postExtractHook, properInstallDir);
+    move(properInstallDir, targetDir);
+    delete(tmpDir);
+  }
+
+  private void postExtractHook(Consumer<Path> postExtractHook, Path properInstallDir) {
+
+    if (postExtractHook != null) {
+      postExtractHook.accept(properInstallDir);
+    }
+  }
+
+  /**
+   * @param path the {@link Path} to start the recursive search from.
+   * @return the deepest subdir {@code s} of the passed path such that all directories between {@code s} and the passed path (including {@code s}) are the sole
+   * item in their respective directory and {@code s} is not named "bin".
+   */
+  private Path getProperInstallationSubDirOf(Path path, Path archiveFile) {
+
+    try (Stream<Path> stream = Files.list(path)) {
+      Path[] subFiles = stream.toArray(Path[]::new);
+      if (subFiles.length == 0) {
+        throw new CliException("The downloaded package " + archiveFile + " seems to be empty as you can check in the extracted folder " + path);
+      } else if (subFiles.length == 1) {
+        String filename = subFiles[0].getFileName().toString();
+        if (!filename.equals(IdeContext.FOLDER_BIN) && !filename.equals(IdeContext.FOLDER_CONTENTS) && !filename.endsWith(".app") && Files.isDirectory(
+            subFiles[0])) {
+          return getProperInstallationSubDirOf(subFiles[0], archiveFile);
+        }
+      }
+      return path;
+    } catch (IOException e) {
+      throw new IllegalStateException("Failed to get sub-files of " + path);
+    }
   }
 
   @Override
-  public void untar(Path file, Path targetDir, TarCompression compression) {
+  public void extractZip(Path file, Path targetDir) {
 
-    unpack(file, targetDir, in -> new TarArchiveInputStream(compression.unpack(in)));
+    extractArchive(file, targetDir, in -> new ZipArchiveInputStream(in));
   }
 
-  private void unpack(Path file, Path targetDir, Function<InputStream, ArchiveInputStream> unpacker) {
+  @Override
+  public void extractTar(Path file, Path targetDir, TarCompression compression) {
+
+    extractArchive(file, targetDir, in -> new TarArchiveInputStream(compression.unpack(in)));
+  }
+
+  /**
+   * @param permissions The integer as returned by {@link TarArchiveEntry#getMode()} that represents the file permissions of a file on a Unix file system.
+   * @return A String representing the file permissions. E.g. "rwxrwxr-x" or "rw-rw-r--"
+   */
+  public static String generatePermissionString(int permissions) {
+
+    // Ensure that only the last 9 bits are considered
+    permissions &= 0b111111111;
+
+    StringBuilder permissionStringBuilder = new StringBuilder("rwxrwxrwx");
+
+    for (int i = 0; i < 9; i++) {
+      int mask = 1 << i;
+      char currentChar = ((permissions & mask) != 0) ? permissionStringBuilder.charAt(8 - i) : '-';
+      permissionStringBuilder.setCharAt(8 - i, currentChar);
+    }
+
+    return permissionStringBuilder.toString();
+  }
+
+  private void extractArchive(Path file, Path targetDir, Function<InputStream, ArchiveInputStream> unpacker) {
 
     this.context.trace("Unpacking archive {} to {}", file, targetDir);
     try (InputStream is = Files.newInputStream(file); ArchiveInputStream ais = unpacker.apply(is)) {
       ArchiveEntry entry = ais.getNextEntry();
+      boolean isTar = ais instanceof TarArchiveInputStream;
       while (entry != null) {
-        Path entryName = Paths.get(entry.getName());
+        String permissionStr = null;
+        if (isTar) {
+          int tarMode = ((TarArchiveEntry) entry).getMode();
+          permissionStr = generatePermissionString(tarMode);
+        }
+
+        Path entryName = Path.of(entry.getName());
         Path entryPath = targetDir.resolve(entryName).toAbsolutePath();
         if (!entryPath.startsWith(targetDir)) {
           throw new IOException("Preventing path traversal attack from " + entryName + " to " + entryPath);
@@ -513,11 +627,53 @@ public class FileAccessImpl implements FileAccess {
           mkdirs(entryPath.getParent());
           Files.copy(ais, entryPath);
         }
+        if (isTar && !this.context.getSystemInfo().isWindows()) {
+          Set<PosixFilePermission> permissions = PosixFilePermissions.fromString(permissionStr);
+          Files.setPosixFilePermissions(entryPath, permissions);
+        }
         entry = ais.getNextEntry();
       }
     } catch (IOException e) {
       throw new IllegalStateException("Failed to extract " + file + " to " + targetDir, e);
     }
+  }
+
+  public void extractDmg(Path file, Path targetDir) {
+
+    assert this.context.getSystemInfo().isMac();
+
+    Path mountPath = this.context.getIdeHome().resolve(IdeContext.FOLDER_UPDATES).resolve(IdeContext.FOLDER_VOLUME);
+    mkdirs(mountPath);
+    ProcessContext pc = this.context.newProcess();
+    pc.executable("hdiutil");
+    pc.addArgs("attach", "-quiet", "-nobrowse", "-mountpoint", mountPath, file);
+    pc.run();
+    Path appPath = findFirst(mountPath, p -> p.getFileName().toString().endsWith(".app"), false);
+    if (appPath == null) {
+      throw new IllegalStateException("Failed to unpack DMG as no MacOS *.app was found in file " + file);
+    }
+    copy(appPath, targetDir);
+    pc.addArgs("detach", "-force", mountPath);
+    pc.run();
+  }
+
+  public void extractMsi(Path file, Path targetDir) {
+
+    this.context.newProcess().executable("msiexec").addArgs("/a", file, "/qn", "TARGETDIR=" + targetDir).run();
+    // msiexec also creates a copy of the MSI
+    Path msiCopy = targetDir.resolve(file.getFileName());
+    delete(msiCopy);
+  }
+
+  public void extractPkg(Path file, Path targetDir) {
+
+    Path tmpDirPkg = createTempDir("ide-pkg-");
+    ProcessContext pc = this.context.newProcess();
+    // we might also be able to use cpio from commons-compression instead of external xar...
+    pc.executable("xar").addArgs("-C", tmpDirPkg, "-xf", file).run();
+    Path contentPath = findFirst(tmpDirPkg, p -> p.getFileName().toString().equals("Payload"), true);
+    extractTar(contentPath, targetDir, TarCompression.GZ);
+    delete(tmpDirPkg);
   }
 
   @Override
@@ -529,7 +685,7 @@ public class FileAccessImpl implements FileAccess {
     }
     this.context.debug("Deleting {} ...", path);
     try {
-      if (Files.isSymbolicLink(path)) {
+      if (Files.isSymbolicLink(path) || isJunction(path)) {
         Files.delete(path);
       } else {
         deleteRecursive(path);
@@ -592,4 +748,49 @@ public class FileAccessImpl implements FileAccess {
     return null;
   }
 
+  @Override
+  public List<Path> listChildren(Path dir, Predicate<Path> filter) {
+
+    if (!Files.isDirectory(dir)) {
+      return List.of();
+    }
+    List<Path> children = new ArrayList<>();
+    try (Stream<Path> childStream = Files.list(dir)) {
+      Iterator<Path> iterator = childStream.iterator();
+      while (iterator.hasNext()) {
+        Path child = iterator.next();
+        if (filter.test(child)) {
+          this.context.trace("Accepted file {}", child);
+          children.add(child);
+        } else {
+          this.context.trace("Ignoring file {} according to filter", child);
+        }
+      }
+    } catch (IOException e) {
+      throw new IllegalStateException("Failed to find children of directory " + dir, e);
+    }
+    return children;
+  }
+
+  @Override
+  public boolean isEmptyDir(Path dir) {
+
+    return listChildren(dir, f -> true).isEmpty();
+  }
+
+  @Override
+  public Path findExistingFile(String fileName, List<Path> searchDirs) {
+
+    for (Path dir : searchDirs) {
+      Path filePath = dir.resolve(fileName);
+      try {
+        if (Files.exists(filePath)) {
+          return filePath;
+        }
+      } catch (Exception e) {
+        throw new IllegalStateException("Unexpected error while checking existence of file " + filePath + " .", e);
+      }
+    }
+    return null;
+  }
 }
