@@ -1,7 +1,6 @@
 package com.devonfw.tools.ide.process;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Objects;
 
@@ -41,7 +40,7 @@ public interface ProcessContext {
    */
   default ProcessContext executable(String executable) {
 
-    return executable(Paths.get(executable));
+    return executable(Path.of(executable));
   }
 
   /**
@@ -112,6 +111,19 @@ public interface ProcessContext {
   }
 
   /**
+   * Sets or overrides the specified environment variable only for the planned {@link #run() process execution}. Please
+   * note that the environment variables are initialized when the {@link ProcessContext} is created. This method
+   * explicitly set an additional or overrides an existing environment and will have effect for each {@link #run()
+   * process execution} invoked from this {@link ProcessContext} instance. Be aware of such side-effects when reusing
+   * the same {@link ProcessContext} to {@link #run() run} multiple commands.
+   *
+   * @param key the name of the environment variable (E.g. "PATH").
+   * @param value the value of the environment variable.
+   * @return this {@link ProcessContext} for fluent API calls.
+   */
+  ProcessContext withEnvVar(String key, String value);
+
+  /**
    * Runs the previously configured {@link #executable(Path) command} with the configured {@link #addArgs(String...)
    * arguments}. Will reset the {@link #addArgs(String...) arguments} but not the {@link #executable(Path) command} for
    * sub-sequent calls.
@@ -120,7 +132,7 @@ public interface ProcessContext {
    */
   default int run() {
 
-    return run(false).getExitCode();
+    return run(ProcessMode.DEFAULT).getExitCode();
   }
 
   /**
@@ -128,11 +140,9 @@ public interface ProcessContext {
    * arguments}. Will reset the {@link #addArgs(String...) arguments} but not the {@link #executable(Path) command} for
    * sub-sequent calls.
    *
-   * @param capture - {@code true} to capture standard {@link ProcessResult#getOut() out} and
-   *        {@link ProcessResult#getErr() err} in the {@link ProcessResult}, {@code false} otherwise (to redirect out
-   *        and err).
+   * @param processMode {@link ProcessMode}
    * @return the {@link ProcessResult}.
    */
-  ProcessResult run(boolean capture);
+  ProcessResult run(ProcessMode processMode);
 
 }
