@@ -1,6 +1,6 @@
 package com.devonfw.tools.ide.context;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 /**
  * Mock instance of {@link com.devonfw.tools.ide.context.IdeContext}.
@@ -13,7 +13,7 @@ public class IdeTestContextMock extends IdeSlf4jContext {
 
   private IdeTestContextMock() {
 
-    super(Paths.get("/"));
+    super(Path.of("/"));
   }
 
   @Override
